[tool.poetry]
name = "lji-meteor"
version = "0.1.1"
description = ""
authors = ["vinaybol <vinay.chindukuri@lji.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.15.1"
boto3 = "^1.35.87"
rich = "^13.9.4"
survey= "^5.4.2"

[tool.poetry.scripts]
meteor = "lji_meteor.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
