[tool.poetry]
name = "lji-meteor"
version = "0.0.2"
description = ""
authors = ["vinaybol <vinay.chindukuri@lji.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "1.40.50"
botocore = "1.40.50"
certifi = "2025.10.5"
charset-normalizer = "3.4.3"
click = "8.3.0"
idna = "3.10"
jmespath = "1.0.1"
markdown-it-py = "4.0.0"
mdurl = "0.1.2"
psycopg2-binary = "2.9.11"
Pygments = "2.19.2"
pyperclip = "1.11.0"
python-dateutil = "2.9.0.post0"
requests = "2.32.5"
rich = "14.2.0"
s3transfer = "0.14.0"
shellingham = "1.5.4"
six = "1.17.0"
survey = "5.4.2"
typer = "0.19.2"
typing_extensions = "4.15.0"
urllib3 = "2.5.0"


[tool.poetry.scripts]
meteor = "lji_meteor.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
